UD Sekawan to Sekawan
Untuk mengatasi masalah di mobile

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="orange lighten-1">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#home" class="brand-logo">UD SEKAWAN</a>
+            <a href="#home" class="brand-logo">SEKAWAN</a>
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
               <li><a href="#product">Product</a></li>
